force-app/main/default/objects/ListPriceDiscount__c/ListPriceDiscount__c.object-meta.xml
<CustomObject>
    <label>List Price Discount</label>
    <nameField>
        <displayFormat>SD Rate {00000}</displayFormat>
        <label>Structured Discount</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List Price Discounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>