force-app/main/default/objects/ListPriceDiscount__c/fields/CustomerDiscountGroup__c.field-meta.xml
<CustomField>
    <fullName>CustomerDiscountGroup__c</fullName>
    <label>Customer Discount Group</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CustomerDiscountGroup</valueSetName>
    </valueSet>
</CustomField>