force-app/main/default/objects/ListPriceDiscount__c/fields/CustomerGroup__c.field-meta.xml
<CustomField>
    <fullName>CustomerGroup__c</fullName>
    <label>zRemove Customer Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Group</valueSetName>
    </valueSet>
</CustomField>