force-app/main/default/objects/ListPriceDiscount__c/fields/DiscountType__c.field-meta.xml
<CustomField>
    <fullName>DiscountType__c</fullName>
    <label>Discount Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DiscountType</valueSetName>
    </valueSet>
</CustomField>