force-app/main/default/objects/ListPriceDiscount__c/fields/EndQuantity__c.field-meta.xml
<CustomField>
    <fullName>EndQuantity__c</fullName>
    <label>EndQuantity</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>