force-app/main/default/objects/ListPriceDiscount__c/fields/OldId__c.field-meta.xml
<CustomField>
    <fullName>OldId__c</fullName>
    <label>OldId</label>
    <length>55</length>
    <type>Text</type>
</CustomField>