force-app/main/default/objects/ListPriceDiscount__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>zRemove Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Book</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>