force-app/main/default/objects/ListPriceDiscount__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <precision>15</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>