force-app/main/default/objects/ListPriceDiscount__c/fields/StartAmount__c.field-meta.xml
<CustomField>
    <fullName>StartAmount__c</fullName>
    <label>Start Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>