force-app/main/default/objects/ListPriceDiscount__c/fields/StartQuantity__c.field-meta.xml
<CustomField>
    <fullName>StartQuantity__c</fullName>
    <label>Start Quantity</label>
    <precision>12</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>