force-app/main/default/objects/ListPriceDiscount__c/fields/ValueType__c.field-meta.xml
<CustomField>
    <fullName>ValueType__c</fullName>
    <label>Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>