force-app/main/default/objects/ListPriceDiscount__c/listViews/Company.listView-meta.xml
<ListView>
    <fullName>Company</fullName>
    <columns>NAME</columns>
    <columns>CustomerDiscountGroup__c</columns>
    <columns>ProductDiscountGroup__c</columns>
    <columns>Subsidiary__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>OrderLineType__c</columns>
    <columns>EndDate__c</columns>
    <columns>StartDate__c</columns>
    <columns>StartQuantity__c</columns>
    <columns>Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CustomerDiscountGroup__c</field>
        <operation>equals</operation>
        <value>Educational Institution</value>
    </filters>
    <label>Company</label>
</ListView>