force-app/main/default/objects/ListPriceDiscount__c/listViews/Custom_View.listView-meta.xml
<ListView>
    <fullName>Custom_View</fullName>
    <columns>NAME</columns>
    <columns>DiscountType__c</columns>
    <columns>OrderLineType__c</columns>
    <columns>Subsidiary__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>CustomerDiscountGroup__c</columns>
    <columns>ProductDiscountGroup__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>ValueType__c</columns>
    <columns>StartQuantity__c</columns>
    <columns>StartAmount__c</columns>
    <columns>Rate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CustomerDiscountGroup__c</field>
        <operation>equals</operation>
        <value>PPZ Member</value>
    </filters>
    <filters>
        <field>MarketSegment__c</field>
        <operation>equals</operation>
        <value>Professional</value>
    </filters>
    <filters>
        <field>ProductDiscountGroup__c</field>
        <operation>equals</operation>
        <value>Rein - Studytube lic + AT</value>
    </filters>
    <label>Custom View</label>
</ListView>