force-app/main/default/objects/ListPriceDiscount__c/listViews/Free_Items.listView-meta.xml
<ListView>
    <fullName>Free_Items</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>DiscountType__c</columns>
    <columns>CustomerDiscountGroup__c</columns>
    <columns>ProductDiscountGroup__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrderLineType__c</field>
        <operation>equals</operation>
        <value>Free</value>
    </filters>
    <label>Free Items</label>
</ListView>