force-app/main/default/objects/ListPriceDiscount__c/listViews/French_Work_Books.listView-meta.xml
<ListView>
    <fullName>French_Work_Books</fullName>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>IsActive__c</columns>
    <columns>OrderLineType__c</columns>
    <columns>CustomerDiscountGroup__c</columns>
    <columns>ProductDiscountGroup__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>Rate__c</columns>
    <columns>Subsidiary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductDiscountGroup__c</field>
        <operation>equals</operation>
        <value>French Workbook</value>
    </filters>
    <label>French Work Books</label>
</ListView>